--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "start": "node apps/backend/dist/main"
+    "start": "node apps/backend/dist/main",
+    "watch": "watch 'npm run build' ./apps/frontend"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
   ],
   "devDependencies": {
     "turbo": "^1.12.4"
+  },
+  "dependencies": {
+    "watch": "^1.0.2"
   }
 }
