--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "turbo": "^1.12.4"
   },
   "dependencies": {
-    "openai": "^4.33.1",
+    "openai": "4.33.1",
     "prismjs": "^1.29.0",
     "watch": "^1.0.2"
   }
