--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "devDependencies": {
     "@types/prismjs": "^1.26.3",
+    "sass": "^1.76.0",
     "turbo": "^1.12.4"
   },
   "dependencies": {
