--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -1,1 +1,7 @@
 OPENAI_API_KEY=''
+
+FIREBASE_API_KEY=''
+FIREBASE_PROJECT_ID=''
+FIREBASE_MESSAGING_SENDER_ID=''
+FIREBASE_APP_ID=''
+FIREBASE_MEASUREMENT_ID=''
