--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "turbo": "^1.12.4"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "openai": "4.33.1",
     "prismjs": "^1.29.0",
     "watch": "^1.0.2"
