--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@dnd-kit/core": "6.1.0",
+    "mixpanel-browser": "2.55.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/mixpanel-browser": "2.50.2",
     "@types/react": "18.2.56",
     "@types/react-dom": "18.2.19",
     "@typescript-eslint/eslint-plugin": "7.0.2",
